--- a/src/Components/styles/HeadCell.scss
+++ b/src/Components/styles/HeadCell.scss
@@ -1,9 +1,10 @@
 .head-cell {
   & .MuiPopover-paper {
     padding: 5px;
+    padding-top: 10px;
 
     & > *:not(:last-child) {
-      margin-bottom: 5px;
+      margin-bottom: 8px;
     }
   }
 
@@ -11,13 +12,25 @@
     display: flex;
     align-items: baseline;
   }
+
   &__children {
     flex: 1 1 0;
     padding-left: 5px;
   }
+
   &__filters {
+    margin: 2px 2px 2px 0;
   }
+
   .cell__wrapper {
     padding: unset;
+  }
+
+  .MuiPaper-root.MuiPaper-elevation.MuiPopover-paper {
+    width: 250px;
+  }
+
+  .filtration-button--setted {
+    background-color: #e0e0e0;
   }
 }
