--- a/src/BaseComponents/styles/HeadCell.scss
+++ b/src/BaseComponents/styles/HeadCell.scss
@@ -5,20 +5,7 @@
     align-items: center;
   }
 
-  &__children {
-    flex: 1 1 0;
-    padding-left: 5px;
-  }
-
-  &__filters {
-    margin: 2px 2px 2px 0;
-  }
-
   .cell__wrapper {
-    padding: unset;
-  }
-
-  .filtration-button--setted {
-    background-color: #e0e0e0;
+    padding: 0 5px;
   }
 }
